# kmail_unsubscribe

./: CMakeLists.txt  README.md  build-msgs.sh  kmail_unsubscribeplugin.json  oneclickunsubscribejob.cpp  oneclickunsubscribejob.h  unsubscribemanager.cpp  unsubscribemanager.h  unsubscribeplugin.cpp  unsubscribeplugin.h  unsubscribeplugininterface.cpp  unsubscribeplugininterface.h
po/: kmail_unsubscribe.pot
